position: fixed; z-index: 9999; чтобы шапка оставалась на месте при скролле (Part 3)

--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -2,9 +2,19 @@
 @import '../common/styles/sass/mixins';
 
 .header {
+    position: fixed;
     height: 80px;
+    min-width: 100%;
+    //padding: 0 30px;
+
+    //padding-left: 10px;
+    //margin-right: 10px;
+    //padding-right: 10px;
     background-color: $mainBgColor;
     display: flex;
     justify-content: flex-end;
     align-items: center;
+
+    //top: 0;
+    z-index: 9999;
 }
